[package]
name = "blender-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.0"
egui = "0.24.0"
log = "0.4.20"
yaml-rust = "0.4.5"
env_logger = "0.10.1"
egui-modal = "0.3.0"
simple-home-dir = "0.2.0"
set_env = "1.3.4"
